# protoform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
docs/source/api/: data.rst  protocols.rst  tokenizer.rst  transformer.rst
docs/source/notebooks/: 00_what_is_a_tensor.ipynb  01_tokenizer.ipynb  02_datasets.ipynb  99_python_idioms.ipynb
src/protoform/: __init__.py  protocols.py
src/protoform/data/: __init__.py  shakespeare.py
src/protoform/layers/: __init__.py  attention.py
src/protoform/models/: __init__.py  transformer.py
src/protoform/tokenizer/: __init__.py  char_tokenizer.py
tests/: conftest.py  test_attention.py  test_shakespeare.py  test_tokenizer.py  test_transformer.py
